fix menu overlaps on top of map problem; fix null data display on map issue

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,7 +10,6 @@
 html, body {
   height: 100%;
   background-color: #c7dae7;
-
 }
 
 /* Space out content a bit */
@@ -22,6 +21,7 @@ body {
 /* Off screen menu */
 .menu {
   position: fixed;
+  z-index: 1;
   top: 0;
   bottom: 0;
   left: 0;
@@ -171,9 +171,14 @@ body {
 }
 
 .jumbotron {
+  position: relative;
   min-height: 500px;
   order: 1;
   flex-grow: 3;
+}
+
+.jumbotron.focusOnPage {
+  z-index: 100;
 }
 
 .route {
